--- a/Cinestar-app/FilmDetalji.xaml
+++ b/Cinestar-app/FilmDetalji.xaml
@@ -65,11 +65,13 @@
 
             <Label x:Name="PlotLabel"
                    FontSize="14"
+                   Margin="20,0,20,0"
                    TextColor="White"/>
 
             <!-- GLUMCI -->
             <Label Text="Glumci"
                    FontSize="20"
+                   Margin="20,0,20,0"
                    FontAttributes="Bold"
                    TextColor="#FFD200"/>
 
@@ -123,7 +125,7 @@
             <CollectionView x:Name="ActorsCollectionView"
                 ItemsSource="{Binding Actors}"
                 ItemsLayout="HorizontalList"
-                HeightRequest="130"
+                HeightRequest="130"           
                 Margin="0,10,0,0"
                 HorizontalScrollBarVisibility="Never">
 
@@ -133,7 +135,7 @@
                    HeightRequest="120"
                    CornerRadius="15"
                    Padding="5"
-                   Margin="5"
+                    Margin="20,0,10,0"
                    BackgroundColor="#071942"
                    HasShadow="False"
                    HorizontalOptions="Center"
@@ -165,15 +167,24 @@
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
-            <Button
-                Text="Vidi sve glumce"
-                BackgroundColor="#FFD200"
-                TextColor="Black"
-                FontAttributes="Bold"
-                CornerRadius="10"
-                HeightRequest="40"
-                HorizontalOptions="Center"
-                Clicked="OnSeeAllActorsClicked"/>
+
+            <HorizontalStackLayout HorizontalOptions="Center" Spacing="5" Margin="0,0,0,20" VerticalOptions="Center">
+                <Label
+        Text="Vidi sve glumce"
+        TextColor="White"
+        TextDecorations="Underline"
+        FontAttributes="Bold"
+        VerticalOptions="Center">
+                    <Label.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnSeeAllActorsClicked"/>
+                    </Label.GestureRecognizers>
+                </Label>
+
+                <Image Source="strelica.png"
+           HeightRequest="12"
+           WidthRequest="12"
+           VerticalOptions="Center"/>
+            </HorizontalStackLayout>
 
         </VerticalStackLayout>
     </ScrollView>
