--- a/Cinestar-app/HomePage.xaml
+++ b/Cinestar-app/HomePage.xaml
@@ -7,11 +7,9 @@
 
     <Grid>
 
-        <!-- Glavni sadržaj -->
         <ScrollView>
             <StackLayout Spacing="20" Padding="10">
 
-                <!-- Header: logo + grad + strelica -->
                 <Grid HeightRequest="60" Padding="0,10,0,0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -19,13 +17,8 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
-                    <!-- Logo lijevo -->
                     <Image Source="logo.png" HeightRequest="100" WidthRequest="100" Grid.Column="0" VerticalOptions="Center"/>
-
-                    <!-- Spacer -->
                     <BoxView Grid.Column="1" WidthRequest="10"/>
-
-                    <!-- Grad + strelica desno -->
                     <StackLayout Orientation="Horizontal" Grid.Column="2" VerticalOptions="Center" Spacing="5">
                         <Label x:Name="CityLabel"
                                Text="{Binding SelectedCity}"
@@ -45,40 +38,48 @@
                     </StackLayout>
                 </Grid>
 
-                <!-- Carousel -->
-                <CarouselView x:Name="HeroCarousel"
-                              HeightRequest="240"
-                              ItemsLayout="HorizontalList"
-                              IsSwipeEnabled="True"
-                              Margin="0">
-                    <CarouselView.ItemTemplate>
-                        <DataTemplate>
-                            <Grid>
-                                <Image Source="{Binding Image}" Aspect="AspectFill"/>
-                                <StackLayout Padding="10"
+                <StackLayout>
+                    <CarouselView x:Name="HeroCarousel"
+              HeightRequest="240"
+              ItemsLayout="HorizontalList"
+              IsSwipeEnabled="True"
+              IndicatorView="carouselIndicators"
+              Margin="0">
+                        <CarouselView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Image Source="{Binding Image}" Aspect="AspectFill"/>
+                                    <StackLayout Padding="10"
                                              WidthRequest="250"
                                              HorizontalOptions="Start"
                                              VerticalOptions="Center">
-                                    <Label Text="{Binding Title}" FontSize="14" FontAttributes="Bold" TextColor="White"/>
-                                    <Label Text="{Binding Year}" FontSize="10" TextColor="#FFD200"/>
-                                    <Label Text="{Binding Description}" FontSize="10" TextColor="White" LineBreakMode="WordWrap"/>
-                                </StackLayout>
-                                <Grid.GestureRecognizers>
-                                    <TapGestureRecognizer Tapped="OnCarouselTapped"/>
-                                </Grid.GestureRecognizers>
-                            </Grid>
-                        </DataTemplate>
-                    </CarouselView.ItemTemplate>
-                </CarouselView>
+                                        <Label Text="{Binding Title}" FontSize="14" FontAttributes="Bold" TextColor="White"/>
+                                        <Label Text="{Binding Year}" FontSize="10" TextColor="#FFD200"/>
+                                        <Label Text="{Binding Description}" FontSize="10" TextColor="White" LineBreakMode="WordWrap"/>
+                                    </StackLayout>
+                                    <Grid.GestureRecognizers>
+                                        <TapGestureRecognizer Tapped="OnCarouselTapped"/>
+                                    </Grid.GestureRecognizers>
+                                </Grid>
+                            </DataTemplate>
+                        </CarouselView.ItemTemplate>
+                    </CarouselView>
 
-                <!-- Najgledanije -->
+                    <IndicatorView x:Name="carouselIndicators"
+                   IndicatorColor="White"
+                   SelectedIndicatorColor="#FFD200" 
+                   HorizontalOptions="Center"
+                   Margin="0,10,0,15" />
+                </StackLayout>
+
+               
                 <StackLayout>
-                    <Label Text="Najgledanije" TextColor="White" FontSize="18" FontAttributes="Bold"/>
-                    <CollectionView x:Name="ComedyCollection" HeightRequest="180" ItemsLayout="HorizontalList">
+                    <Label Text="Najgledanije" TextColor="White" Margin="10" FontSize="14"  TextTransform="Uppercase"/>
+                    <CollectionView x:Name="ComedyCollection" HeightRequest="250" ItemsLayout="HorizontalList">
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
-                                <Frame Padding="0" Margin="5" BackgroundColor="Transparent" HasShadow="False" CornerRadius="12">
-                                    <Image Source="{Binding Poster}" WidthRequest="130" HeightRequest="180" Aspect="AspectFill"/>
+                                <Frame Padding="0" Margin="0,5,15,0" BackgroundColor="Transparent" HasShadow="False" CornerRadius="12" HeightRequest="240" WidthRequest="185">
+                                    <Image Source="{Binding Poster}" WidthRequest="200" HeightRequest="240" Aspect="AspectFill"/>
                                     <Frame.GestureRecognizers>
                                         <TapGestureRecognizer Tapped="OnFilmTapped"/>
                                     </Frame.GestureRecognizers>
@@ -88,14 +89,14 @@
                     </CollectionView>
                 </StackLayout>
 
-                <!-- U bioskopima uskoro -->
+              
                 <StackLayout>
-                    <Label Text="U bioskopima uskoro" TextColor="White" FontSize="18" FontAttributes="Bold"/>
-                    <CollectionView x:Name="AdventureCollection" HeightRequest="180" ItemsLayout="HorizontalList">
+                    <Label Text="U bioskopima uskoro" TextColor="White" Margin="10" FontSize="14"  TextTransform="Uppercase"/>
+                    <CollectionView x:Name="AdventureCollection" HeightRequest="250" ItemsLayout="HorizontalList">
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
-                                <Frame Padding="0" Margin="5" BackgroundColor="Transparent" HasShadow="False" CornerRadius="12">
-                                    <Image Source="{Binding Poster}" WidthRequest="130" HeightRequest="180" Aspect="AspectFill"/>
+                                <Frame Padding="0" Margin="0,5,15,0" BackgroundColor="Transparent" HasShadow="False" CornerRadius="12" HeightRequest="240" WidthRequest="185"> 
+                                    <Image Source="{Binding Poster}" WidthRequest="200" HeightRequest="240" Aspect="AspectFill"/>
                                     <Frame.GestureRecognizers>
                                         <TapGestureRecognizer Tapped="OnFilmTapped"/>
                                     </Frame.GestureRecognizers>
@@ -105,14 +106,14 @@
                     </CollectionView>
                 </StackLayout>
 
-                <!-- Pravi hitovi -->
+              
                 <StackLayout>
-                    <Label Text="Pravi hitovi" TextColor="White" FontSize="18" FontAttributes="Bold"/>
-                    <CollectionView x:Name="ActionCollection" HeightRequest="180" ItemsLayout="HorizontalList">
+                    <Label Text="Pravi hitovi" TextColor="White" Margin="10" FontSize="14"  TextTransform="Uppercase"/>
+                    <CollectionView x:Name="ActionCollection" HeightRequest="250" ItemsLayout="HorizontalList">
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
-                                <Frame Padding="0" Margin="5" BackgroundColor="Transparent" HasShadow="False" CornerRadius="12">
-                                    <Image Source="{Binding Poster}" WidthRequest="130" HeightRequest="180" Aspect="AspectFill"/>
+                                <Frame Padding="0" Margin="0,5,15,0" BackgroundColor="Transparent" HasShadow="False" CornerRadius="12" HeightRequest="240" WidthRequest="185">
+                                    <Image Source="{Binding Poster}" WidthRequest="200" HeightRequest="240" Aspect="AspectFill"/>
                                     <Frame.GestureRecognizers>
                                         <TapGestureRecognizer Tapped="OnFilmTapped"/>
                                     </Frame.GestureRecognizers>
@@ -122,7 +123,7 @@
                     </CollectionView>
                 </StackLayout>
 
-                <!-- Call to action -->
+               
                 <Button Text="Vidi sve filmove"
                         BackgroundColor="#FFD200"
                         TextColor="#051851"
@@ -131,16 +132,16 @@
                         HeightRequest="50"
                         Clicked="OnSeeAllClicked"/>
 
-                <!-- Footer -->
+                
                 <Label Text="© 2026 Cinestar. All rights reserved."
                        TextColor="#AAAAAA"
-                       FontSize="12"
+                       FontSize="10"
                        HorizontalOptions="Center"
-                       Margin="0,20,0,20"/>
+                       Margin="0,20,0,5"/>
             </StackLayout>
         </ScrollView>
 
-        <!-- Fullscreen Overlay -->
+       
         <Grid x:Name="OverlayGrid"
               BackgroundColor="#80000000"
               IsVisible="False"
