--- a/Cinestar-app/Filmovi.xaml
+++ b/Cinestar-app/Filmovi.xaml
@@ -19,7 +19,7 @@
         <!-- HEADER -->
         <Grid Grid.Row="0"
               HeightRequest="60"
-              Padding="0,10,0,0">
+              >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -30,7 +30,8 @@
                    HeightRequest="100"
                    WidthRequest="100"
                    Grid.Column="0"
-                   VerticalOptions="Center"/>
+                   VerticalOptions="Center"
+                   Margin="15,10,0,0"/>
 
             <StackLayout Orientation="Horizontal"
                          Grid.Column="2"
@@ -39,6 +40,8 @@
                 <Label Text="{Binding SelectedCity}"
                        TextColor="white"
                        FontAttributes="Bold"
+                       VerticalOptions="Center"
+                       Margin="0,10,0,10"
                        FontSize="16">
                     <Label.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnCityTapped"/>
@@ -47,7 +50,10 @@
 
                 <Image Source="strelica.png"
                        HeightRequest="10"
-                       WidthRequest="10"/>
+                       WidthRequest="10"
+                       VerticalOptions="Center"
+                       Margin="0,10,15,10"
+                       />
             </StackLayout>
         </Grid>
 
@@ -55,6 +61,7 @@
         <BoxView Grid.Row="1"
                  HeightRequest="1"
                  Color="#3e3e57"
+                 Margin="0,10,0,0"
                  HorizontalOptions="Fill"
                  Opacity="0.6"/>
 
@@ -66,6 +73,8 @@
 
             <Picker x:Name="GenrePicker"
                     Title="Filter po žanru"
+                    VerticalOptions="Center"
+                    Margin="15,0,0,10"
                     TextColor="White"
                     SelectedIndexChanged="OnGenreChanged"/>
 
@@ -74,7 +83,7 @@
                    HeightRequest="10"
                    WidthRequest="10"
                    VerticalOptions="Center"
-                   Margin="5,0,0,0"/>
+                   Margin="0,0,15,10"/>
         </Grid>
 
         <!-- LINE UNDER PICKER -->
