--- a/Cinestar-app/RezervacijaPage.xaml
+++ b/Cinestar-app/RezervacijaPage.xaml
@@ -2,112 +2,215 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
              x:Name="Page"
+             BackgroundColor="#051851"
              x:Class="Cinestar_app.RezervacijaPage">
 
-    <!-- ISTA GRADIENT POZADINA -->
-    <ContentPage.Background>
-        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-            <GradientStop Color="#051851" Offset="0"/>
-            <GradientStop Color="#0B2A6F" Offset="1"/>
-        </LinearGradientBrush>
-    </ContentPage.Background>
-
     <ScrollView>
-        <VerticalStackLayout Padding="20" Spacing="20">
+        <VerticalStackLayout Padding="0" Spacing="20">
 
-            <!-- POSTER FILMA -->
-            <Image x:Name="PosterImage"
-                   HeightRequest="260"
-                   Aspect="AspectFill"/>
+            
+                <Frame BackgroundColor="#0c205e" Margin="0" CornerRadius="0">
 
-            <!-- NASLOV FILMA -->
-            <Label x:Name="FilmTitleLabel"
-                   FontSize="26"
+                    <StackLayout Orientation="Horizontal" Margin="20">
+                        <Image x:Name="PosterImage"
+                   HeightRequest="180"
+                   HorizontalOptions="Start"
+                   Aspect="AspectFit"/>
+                        <StackLayout VerticalOptions="Center">
+
+                            <Label x:Name="FilmTitleLabel"
+                   FontSize="15"
+                   Margin="20,0,0,0"
                    FontAttributes="Bold"
                    TextColor="White"
-                   HorizontalOptions="Center"/>
+                   HorizontalOptions="Start"/>
+                            <Label Text="{Binding Film.Genre}"
+            FontSize="12"
+            Margin="20,0,0,0"
+            TextColor="White"/>
+                            <StackLayout Orientation="Horizontal"
+                         Spacing="5"
+                         Margin="20,5,20,0">
+                                <Image Source="clock.webp" HeightRequest="12"/>
+                                <Label Text="{Binding Film.Runtime}" TextColor="White" FontSize="12"/>
+                            </StackLayout>
+                            <StackLayout Orientation="Horizontal" Margin="0,5,5,0">
+                                <Label Text="Režiser:" Margin="20,0,5,0" FontSize="12"/>
+                                <Label Text="{Binding Film.Director}" FontSize="12" Margin="0,0,20,0" TextColor="White" VerticalOptions="Center"/>
+                            </StackLayout>
+                        </StackLayout>
+                    </StackLayout>
+                </Frame>
+          
+            <Label Text="Odaberi datum i vrijeme"
+       FontSize="18"
+       FontAttributes="Bold"
+       Margin="20,0,0,0"/>
 
-            <!-- ODABIR DATUMA -->
-            <Label Text="Datum projekcije"
-                   FontSize="18"
-                   FontAttributes="Bold"
-                   TextColor="#FFD200"/>
 
-            <DatePicker x:Name="DatePicker"
-            TextColor="White"
-            MinimumDate="{x:Static system:DateTime.Today}"
-            Format="dd.MM.yyyy."/>
+            <Grid ColumnDefinitions="*,*"
+      ColumnSpacing="12"
+      Margin="20,0">
 
+                <!-- DATUM -->
+                <Frame Grid.Column="0"
+           Padding="10,4"
+           CornerRadius="12"
+           BackgroundColor="#102A66"
+           BorderColor="#FFD200"
+                       Opacity="0.8"
+           HasShadow="False">
 
-            <!-- ODABIR TERMINA -->
-            <Label Text="Vrijeme projekcije"
-                   FontSize="18"
-                   FontAttributes="Bold"
-                   TextColor="#FFD200"/>
+                    <DatePicker x:Name="DatePicker"
+                    TextColor="White"
+                    BackgroundColor="Transparent"
+                    MinimumDate="{x:Static system:DateTime.Today}"
+                    Format="dd.MM.yyyy."/>
+                </Frame>
 
-            <Picker x:Name="TimePicker"
-                    Title="Odaberite termin"
-                    TextColor="White"/>
+                <!-- TERMIN -->
+                <Frame Grid.Column="1"
+           Padding="10,4"
+           CornerRadius="12"
+           BackgroundColor="#102A66"
+           BorderColor="#FFD200"
+                        Opacity="0.8"
+           HasShadow="False">
+
+                    <Picker x:Name="TimePicker"
+                Title="Termin"
+                TextColor="White"
+                BackgroundColor="Transparent"/>
+                </Frame>
+
+            </Grid>
 
             <!-- BROJ KARATA -->
-            <Label Text="Broj karata"
-                   FontSize="18"
-                   FontAttributes="Bold"
-                   TextColor="#FFD200"/>
-            
-            
-      
 
-            <HorizontalStackLayout Spacing="15">
-                <Stepper x:Name="TicketStepper"
-                         Minimum="1"
-                         Maximum="10"
-                         Value="1"/>
+            <StackLayout Orientation="Horizontal">
+                <StackLayout VerticalOptions="Center">
+                <Label Text="Odaberi broj sjedišta i" 
+                   FontSize="14"
+                    Margin="20,0,0,0"
+                   TextColor="white"/>
+                    <Label Text="poziciju"
+                           FontSize="14"
+                            Margin="20,0,0,0"
+                        TextColor="white"/>
+                </StackLayout>
+                <HorizontalStackLayout Spacing="20" HorizontalOptions="EndAndExpand" Margin="0,0,20,0">
+                    <Button Text="−"
+                        WidthRequest="40"
+                        HeightRequest="40"
+                        CornerRadius="20"
+                        BackgroundColor="Transparent"
+                        BorderColor="#FFD200"
+                        BorderWidth="2"
+                        TextColor="#FFD200"
+                        Clicked="MinusClicked"/>
 
-                <Label x:Name="TicketCountLabel"
+                    <Label x:Name="TicketCountLabel"
                        Text="1"
+                       FontSize="20"
+                       FontAttributes="Bold"
                        TextColor="White"
-                       FontSize="16"
                        VerticalOptions="Center"/>
-            </HorizontalStackLayout>
 
+                    <Button Text="+"
+                        WidthRequest="40"
+                        HeightRequest="40"
+                        CornerRadius="20"
+                        BackgroundColor="Transparent"
+                        BorderColor="#FFD200"
+                        BorderWidth="2"
+                        TextColor="#FFD200"
+                        Clicked="PlusClicked"/>
 
+                </HorizontalStackLayout>
+            </StackLayout>
+            <BoxView Grid.Row="1"
+HeightRequest="1"
+Color="#3e3e57"
+Margin="20,0,20,10"
+HorizontalOptions="Fill"
+Opacity="1"/>
 
+            <!-- PLATNO -->
+            <Frame BackgroundColor="White" CornerRadius="5" Margin="30,0,30,0" HeightRequest="40" Padding="0">
+            <Label Text="Platno"
+                   HorizontalOptions="Center"
+                   TextColor="Black"
+                    CharacterSpacing="1"
+                   Margin="0,10"/>
+               </Frame>
+            <!-- SJEDIŠTA -->
+            <Grid  Margin="10,0,10,0" ColumnDefinitions="*,40,*">
 
-            <FlexLayout
-    BindableLayout.ItemsSource="{Binding Seats}"
-    Direction="Row"
-    Wrap="Wrap"
-               
-   >
+                <!-- LIJEVO -->
+                <FlexLayout Grid.Column="0"
+                            BindableLayout.ItemsSource="{Binding SeatsLeft}"
+                            Direction="Row"
+                            Wrap="Wrap"
+                            JustifyContent="Center">
+                    <BindableLayout.ItemTemplate>
+                        <DataTemplate>
+                            <Image Source="{Binding Image}"
+                                   WidthRequest="30"
+                                   HeightRequest="30"
+                                   Margin="4">
+                                <Image.GestureRecognizers>
+                                    <TapGestureRecognizer
+                                        Command="{Binding BindingContext.SeatTappedCommand, Source={x:Reference Page}}"
+                                        CommandParameter="{Binding .}" />
+                                </Image.GestureRecognizers>
+                            </Image>
+                        </DataTemplate>
+                    </BindableLayout.ItemTemplate>
+                </FlexLayout>
 
-                <BindableLayout.ItemTemplate>
-                    <DataTemplate>
-                        <Image
-                Source="{Binding Image}"
-                WidthRequest="30"
-                            Margin="2">
-                            <Image.GestureRecognizers>
-                                <TapGestureRecognizer
-                        Command="{Binding BindingContext.SeatTappedCommand, Source={x:Reference Page}}"
-                        CommandParameter="{Binding .}" />
-                            </Image.GestureRecognizers>
-                        </Image>
-                    </DataTemplate>
-                </BindableLayout.ItemTemplate>
+                <!-- PROLAZ -->
+                <BoxView Grid.Column="1"/>
 
-            </FlexLayout>
+                <!-- DESNO -->
+                <FlexLayout Grid.Column="2"
+                            BindableLayout.ItemsSource="{Binding SeatsRight}"
+                            Direction="Row"
+                            Wrap="Wrap"
+                            JustifyContent="Center">
+                    <BindableLayout.ItemTemplate>
+                        <DataTemplate>
+                            <Image Source="{Binding Image}"
+                                   WidthRequest="30"
+                                   HeightRequest="30"
+                                   Margin="4">
+                                <Image.GestureRecognizers>
+                                    <TapGestureRecognizer
+                                        Command="{Binding BindingContext.SeatTappedCommand, Source={x:Reference Page}}"
+                                        CommandParameter="{Binding .}" />
+                                </Image.GestureRecognizers>
+                            </Image>
+                        </DataTemplate>
+                    </BindableLayout.ItemTemplate>
+                </FlexLayout>
 
+            </Grid>
 
+            <!-- POTVRDA -->
+            <StackLayout Orientation="Horizontal">
+                <Button x:Name="ConfirmButton"
+        Text="Potvrdi rezervaciju"
+        BackgroundColor="#FFD200"
+        TextColor="#051851"
+        FontAttributes="Bold"
+        CornerRadius="0"
+        HorizontalOptions="EndAndExpand"
+        WidthRequest="200"
+        Margin="20"
+        IsEnabled="False"
+        Opacity="0.5"
+        Clicked="ConfirmButton_Clicked"/>
 
-            <!-- GUMB ZA POTVRDU -->
-            <Button Text="Potvrdi rezervaciju"
-                    BackgroundColor="#FFD200"
-                    TextColor="#051851"
-                    FontAttributes="Bold"
-                    CornerRadius="15"
-                    Clicked="ConfirmButton_Clicked"
-                    HeightRequest="50"/>
+            </StackLayout>
 
         </VerticalStackLayout>
     </ScrollView>
